# MSP

./: .gitignore  LICENSE  benchmark_orion_msp_dynamic.py  pyproject.toml
results/msp_dynamic/: msp_openml_cc18.ALL.csv  msp_openml_cc18.summary.txt  msp_tabzilla.ALL.csv  msp_tabzilla.summary.txt  msp_talent.ALL.csv  msp_talent.summary.txt
results/msp_dynamic/openml_cc18/: worker_0.csv  worker_1.csv  worker_2.csv  worker_3.csv  worker_4.csv  worker_5.csv  worker_6.csv  worker_7.csv
results/msp_dynamic/tabzilla/: worker_0.csv  worker_1.csv  worker_2.csv  worker_3.csv  worker_4.csv  worker_5.csv  worker_6.csv  worker_7.csv
results/msp_dynamic/talent/: worker_0.csv  worker_1.csv  worker_2.csv  worker_3.csv  worker_4.csv  worker_5.csv  worker_6.csv  worker_7.csv
results/msp_parallel_3+3+2/: msp_openml_cc18.ALL.csv  msp_openml_cc18.summary.txt  msp_tabzilla.ALL.csv  msp_tabzilla.summary.txt  msp_talent.ALL.csv  msp_talent.summary.txt
results/msp_parallel_3+3+2/openml_cc18/: worker_0.csv  worker_1.csv
results/msp_parallel_3+3+2/tabzilla/: worker_0.csv  worker_1.csv  worker_2.csv
results/msp_parallel_3+3+2/talent/: worker_0.csv  worker_1.csv  worker_2.csv
scripts/: train_stage1.sh  train_stage2.sh  train_stage3.sh
scripts/run/: amd.sh  msp_parallel_3+3+2.sh
src/orion_msp/: __about__.py  __init__.py
src/orion_msp/model/: attention.py  embedding.py  encoders.py  interaction.py  learning.py  orion_msp.py  rope.py
src/orion_msp/prior/: activations.py  genload.py  mlp_scm.py  tree_scm.py
src/orion_msp/sklearn/: classifier.py  preprocessing.py
src/orion_msp/train/: run.py  train_config.py
